<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wireless Parking System</string>
    
    <string name="action_settings">Settings</string>
    <string name="action_search"> Find </string>
    <string name="main_map"> Map </string>
    <string name="main_settings"> Settings </string>
    <string name="main_where"> Where </string>
    <string name="action_refresh"> Refresh </string>
    <string name="action_location_found"> Location Found </string>
    <string name="action_about"> About </string>
    <string name="find_heading"> Find Parking </string> 
   	<string name="selection_red"> Red </string> 
    <string name="selection_yellow"> Yellow </string>
    <string name="find_settings"> Include: </string>
    <string name="find_nearest"> Nearest to </string>
    <string name="where_heading"> Where </string>
    <string name="where_settings"> You parked at: </string>
    <string name="where_saved"> Your saved location </string>
    <string name="saved_location"></string>
    
    <string-array name="spinner_find">
        <item>None</item>
        <item>Block A</item>
        <item>Block B</item>
    </string-array>
    
    <string-array name="spinner_where">
        <item>None</item>
        <item>A1</item>
        <item>A2</item>
        <item>A3</item>
        <item>A4</item>
        <item>A5</item>
        <item>A6</item>
        <item>A7</item>
        <item>A8</item>
        <item>B1</item>
        <item>B2</item>
        <item>B3</item>
        <item>B4</item>
        <item>B5</item>
        <item>B6</item>
        <item>B7</item>
        <item>B8</item>
    </string-array>
    
    <string-array name="nav_drawer_items">
        <item>Map</item>
        <item>Find</item>
        <item>Where</item>
        <item>Settings</item>
    </string-array>
     
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/drawer_map</item>
        <item>@drawable/drawer_find</item> <!-- To change and differentiate from Home icon -->
        <item>@drawable/drawer_where</item>
        <item>@drawable/drawer_settings</item>
    </array>
     
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    
    <string name="header_services_json">&#8226; Services_JSON</string>
    
    <string name="header_jsmx">&#8226; JSMX (JavaScript MX) - This is a ColdFusion API for AJAX.</string>
    
    <string name="license_services_json">
        Copyright &#169; 2005 Michal Migurski
        \nAll rights reserved.
        \n\nRedistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
		\n\n1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
		\n\n2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.
		\n\nTHIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
    	\n\n@license
    	\nhttp://www.opensource.org/licenses/bsd-license.php
    	\n\n@link 
    	\nhttp://pear.php.net/pepr/pepr-proposal-show.php?id=198
    </string>
    
    <string name="license_jsmx">
        AUTHOR: 		Todd Kingham [todd@lalabird.com] - Jan Jannek [jan.jannek@Cetecom.de]
        \nCREATED:		8.21.2005
		\nVERSION:		2.6.0
        \n\nTHIS IS AN OPEN SOURCE API. YOU ARE FREE TO USE THIS API IN ANY APPLICATION,
        TO COPY IT OR MODIFY THE FUNCTIONS FOR YOUR OWN NEEDS, AS LONG THIS HEADER INFORMATION
        REMAINS IN TACT AND YOU DON\'T CHARGE ANY MONEY FOR IT. USE THIS API AT YOUR OWN
        RISK. NO WARRANTY IS EXPRESSED OR IMPLIED, AND NO LIABILITY ASSUMED FOR THE RESULT OF
        USING THIS API.
       	\n\nTHIS API IS LICENSED UNDER THE CREATIVE COMMONS ATTRIBUTION-SHAREALIKE LICENSE.
      	FOR THE FULL LICENSE TEXT PLEASE VISIT: http://creativecommons.org/licenses/by-sa/2.5/ 	
    </string>

</resources>
