<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	
	<LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" >
    	
	    <TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:padding="15dp"
        	android:textSize="16sp"
        	android:text="@string/header_services_json" />
    
   		<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:padding="15dp"
        	android:typeface="monospace"
        	android:background="#DDDDDD"
        	android:text="@string/license_services_json" />
   		
   		<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:padding="15dp"
        	android:textSize="16sp"
        	android:text="@string/header_jsmx" />
    
   		<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:padding="15dp"
        	android:typeface="monospace"
        	android:background="#DDDDDD"
        	android:text="@string/license_jsmx" />

	</LinearLayout>

</ScrollView>
