<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_weight="1"
        android:background="#fff3f3f3" >
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0.15"
            android:background="#fff3f3f3"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/find_heading" />
        
       <!-- This used to represent the black line to show the effect of separation --> 
       <View 
        android:background="?android:attr/listDivider" 
        android:layout_height="1dp" 
        android:layout_width="fill_parent"/>
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="0.08"
            android:background="#fff3f3f3"
            android:text="@string/find_settings" />
        
        <LinearLayout
            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal" >
        	
            <CheckBox
                android:id="@+id/checkbox_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="right" />

                
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
               	android:background="#fff3f3f3"
            	android:text="@string/selection_red"
            	android:layout_weight="5" />
            	
            <CheckBox
                android:id="@+id/checkbox_yellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
                
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
               	android:background="#fff3f3f3"
            	android:text="@string/selection_yellow"
            	android:layout_weight="5" />

        </LinearLayout>
        
        <View 
        	android:background="?android:attr/listDivider" 
        	android:layout_height="1dp" 
        	android:layout_width="fill_parent"/>
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0.15"
            android:text="@string/find_nearest" />
        
        <Spinner
            android:id="@+id/spinner_nearest" 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:entries="@array/spinner_find"
            android:layout_weight="0.10"/>
        
    </LinearLayout>
    
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="17.64"
         android:background="#ff0000"
         android:orientation="vertical" >
        
         <WebView  
    		android:id="@+id/webview_find"
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent" />
        
     </LinearLayout>
    

</LinearLayout>
