<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#fff3f3f3"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0.00"
            android:background="#fff3f3f3"
            android:text="@string/where_heading"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- This used to represent the black line to show the effect of separation -->

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0.00"
            android:background="#fff3f3f3"
            android:text="@string/where_settings" />
        
        <Spinner
            android:id="@+id/spinner_location" 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:entries="@array/spinner_where"
            android:layout_weight="0.10"/>

       <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0.00"
            android:background="#fff3f3f3"
            android:text="@string/where_saved" />

        <TextView
            android:id="@+id/textview_location"
            android:layout_width="202dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corner_heatherblue"
            android:gravity="center"
            android:text="@string/saved_location"
            android:textColor="#fff3f3f3" />
    </LinearLayout>
    
    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="17.64"
         android:background="#ffff00"
         android:orientation="vertical" >
        
        <WebView  
    		android:id="@+id/webview_where"
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent" />
        
     </LinearLayout>
    

</LinearLayout>
